# AndroidASanCheckSameStruct

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/androidasanchecksamestruct/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  log.h  native-lib.cpp
app/src/main/cpp/guest_msg/: guest_api.h  guest_msg_mgr.cpp  guest_msg_mgr.h
app/src/main/cpp/user_msg/: CMakeLists.txt  user_msg_api.h  user_msg_mgr.cpp  user_msg_mgr.h
app/src/main/java/com/example/androidasanchecksamestruct/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/androidasanchecksamestruct/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
